lastName renamed to surname everywhere